fine tuning the frontend

--- a/notebooks/Jasmin_utils.skills.ipynb
+++ b/notebooks/Jasmin_utils.skills.ipynb
@@ -5,19 +5,11 @@
    "execution_count": 1,
    "id": "ultimate-research",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/jasminkazi/.pyenv/versions/3.8.6/envs/fydjob/lib/python3.8/site-packages/pandas/compat/__init__.py:97: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
-      "  warnings.warn(msg)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from fydjob.NLPFrame import NLPFrame\n",
     "from fydjob.utils import count_skills\n",
+    "from fydjob.Doc2VecPipeline import Doc2VecPipeline\n",
     "import pandas as pd"
    ]
   },
@@ -316,135 +308,18 @@
        "</div>"
       ],
       "text/plain": [
-       "      job_id                                   job_title  \\\n",
-       "0          1  Data Scientist / Matching Engineer (m/w/d)   \n",
-       "1          2    Senior Software Engineer - Data Platform   \n",
-       "2          3                Senior Data Engineer (m/w/t)   \n",
-       "3          4                       Data Engineer (w/m/d)   \n",
-       "4          5                               Data Engineer   \n",
-       "...      ...                                         ...   \n",
-       "5876    5877                   Manager, Machine Learning   \n",
-       "5877    5878               Lead Data Scientist - Haskell   \n",
-       "5878    5879            Senior Data Scientist (GEC11902)   \n",
-       "5879    5880             Senior Data & Applied Scientist   \n",
-       "5880    5881     Principal Data Scientist, Deep Learning   \n",
-       "\n",
-       "                                               job_text          company  \\\n",
-       "0     You are responsible for improvement of Taledo’...           Taledo   \n",
-       "1     We are looking for a Senior Software Engineer ...       Zalando SE   \n",
-       "2     As a member of the Data Engineering Team, you ...     Quandoo GmbH   \n",
-       "3     We are digitty.io – an international start-up ...       digitty.io   \n",
-       "4     We activate data for our clients by using stat...  Gemma Analytics   \n",
-       "...                                                 ...              ...   \n",
-       "5876  Job Description\\nAlexa is Amazon's new cloud-b...       Amazon.com   \n",
-       "5877  Description:\\nTarget is looking for engineers ...           TARGET   \n",
-       "5878  Position Description\\nProficient in Java or Py...          Walmart   \n",
-       "5879  We are the Bing Core Relevance team responsibl...        Microsoft   \n",
-       "5880  Comcast’s Technology &amp; Product organizatio...          Comcast   \n",
-       "\n",
-       "         location                                           job_info job_link  \\\n",
-       "0          Berlin  Data Scientist / Matching Engineer (m/w/d)\\nTa...     NULL   \n",
-       "1          Berlin  Senior Software Engineer - Data Platform\\nZala...     NULL   \n",
-       "2          Berlin  Senior Data Engineer (m/w/t)\\nQuandoo GmbH17 B...     NULL   \n",
-       "3          Berlin         Data Engineer (w/m/d)\\ndigitty.io - Berlin     NULL   \n",
-       "4          Berlin            Data Engineer\\nGemma Analytics - Berlin     NULL   \n",
-       "...           ...                                                ...      ...   \n",
-       "5876  SunnyvaleCA                                               NULL     NULL   \n",
-       "5877  SunnyvaleCA                                               NULL     NULL   \n",
-       "5878  SunnyvaleCA                                               NULL     NULL   \n",
-       "5879  SunnyvaleCA                                               NULL     NULL   \n",
-       "5880  SunnyvaleCA                                               NULL     NULL   \n",
-       "\n",
-       "         query_text       source tag_language   reviews  \\\n",
-       "0     data engineer  scrape_json           en      NULL   \n",
-       "1     data engineer  scrape_json           en      NULL   \n",
-       "2     data engineer  scrape_json           en      NULL   \n",
-       "3     data engineer  scrape_json           en      NULL   \n",
-       "4     data engineer  scrape_json           en      NULL   \n",
-       "...             ...          ...          ...       ...   \n",
-       "5876           NULL     kaggle_1           en   25907.0   \n",
-       "5877           NULL     kaggle_1           en   33275.0   \n",
-       "5878           NULL     kaggle_1           en  148114.0   \n",
-       "5879           NULL     kaggle_1           en    4618.0   \n",
-       "5880           NULL     kaggle_1           en   11610.0   \n",
-       "\n",
-       "                                     job_info_tokenized  \\\n",
-       "0     [data, scientist, matching, engineer, mwd, tal...   \n",
-       "1     [senior, software, engineer, data, platform, z...   \n",
-       "2     [senior, data, engineer, mwt, quandoo, gmbh, b...   \n",
-       "3              [data, engineer, wmd, digittyio, berlin]   \n",
-       "4            [data, engineer, gemma, analytics, berlin]   \n",
-       "...                                                 ...   \n",
-       "5876                                             [null]   \n",
-       "5877                                             [null]   \n",
-       "5878                                             [null]   \n",
-       "5879                                             [null]   \n",
-       "5880                                             [null]   \n",
-       "\n",
-       "                                     job_text_tokenized  \\\n",
-       "0     [you, are, responsible, for, improvement, of, ...   \n",
-       "1     [we, are, looking, for, a, senior, software, e...   \n",
-       "2     [as, a, member, of, the, data, engineering, te...   \n",
-       "3     [we, are, digittyio, an, international, startu...   \n",
-       "4     [we, activate, data, for, our, clients, by, us...   \n",
-       "...                                                 ...   \n",
-       "5876  [job, description, alexa, is, amazons, new, cl...   \n",
-       "5877  [description, target, is, looking, for, engine...   \n",
-       "5878  [position, description, proficient, in, java, ...   \n",
-       "5879  [we, are, the, bing, core, relevance, team, re...   \n",
-       "5880  [comcasts, technology, amp, product, organizat...   \n",
-       "\n",
-       "                           job_text_tokenized_titlecase  \\\n",
-       "0     [Data, Scientist, Matching, Engineer, mwd, Tal...   \n",
-       "1     [Senior, Software, Engineer, Data, Platform, Z...   \n",
-       "2     [Senior, Data, Engineer, mwt, Quandoo, GmbH, B...   \n",
-       "3              [Data, Engineer, wmd, digittyio, Berlin]   \n",
-       "4            [Data, Engineer, Gemma, Analytics, Berlin]   \n",
-       "...                                                 ...   \n",
-       "5876                                             [NULL]   \n",
-       "5877                                             [NULL]   \n",
-       "5878                                             [NULL]   \n",
-       "5879                                             [NULL]   \n",
-       "5880                                             [NULL]   \n",
-       "\n",
-       "                               job_title_tokenized  \\\n",
-       "0       [data, scientist, matching, engineer, mwd]   \n",
-       "1     [senior, software, engineer, data, platform]   \n",
-       "2                    [senior, data, engineer, mwt]   \n",
-       "3                            [data, engineer, wmd]   \n",
-       "4                                 [data, engineer]   \n",
-       "...                                            ...   \n",
-       "5876                  [manager, machine, learning]   \n",
-       "5877              [lead, data, scientist, haskell]   \n",
-       "5878                [senior, data, scientist, gec]   \n",
-       "5879            [senior, data, applied, scientist]   \n",
-       "5880  [principal, data, scientist, deep, learning]   \n",
-       "\n",
-       "                           job_text_tokenized_processed  \\\n",
-       "0     [responsible, improvement, taledos, search, ma...   \n",
-       "1     [looking, senior, software, engineer, extensiv...   \n",
-       "2     [member, data, engineering, team, responsible,...   \n",
-       "3     [digittyio, international, startup, headquarte...   \n",
-       "4     [activate, data, client, using, stateoftheart,...   \n",
-       "...                                                 ...   \n",
-       "5876  [job, description, alexa, amazon, new, cloudba...   \n",
-       "5877  [description, target, looking, engineer, data,...   \n",
-       "5878  [position, description, proficient, java, pyth...   \n",
-       "5879  [bing, core, relevance, team, responsible, ret...   \n",
-       "5880  [comcasts, technology, amp, product, organizat...   \n",
-       "\n",
-       "                                                 skills  \n",
-       "0     [(responsible, soft_skills), (business, busine...  \n",
-       "1     [(api, knowledge), (cloud, programming), (effi...  \n",
-       "2     [(responsible, soft_skills), (pipelines, knowl...  \n",
-       "3     [(saas, knowledge), (integration, programming)...  \n",
-       "4     [(client, business), (honest, soft_skills), (a...  \n",
-       "...                                                 ...  \n",
-       "5876  [(alexa, programming), (signal, knowledge), (r...  \n",
-       "5877  [(optimization, knowledge), (modeling, knowled...  \n",
-       "5878  [(java, programming), (python, programming), (...  \n",
-       "5879  [(responsible, soft_skills), (queries, knowled...  \n",
-       "5880  [(organization, soft_skills), (innovative, sof...  \n",
+       "      job_id                                   job_title  ...                       job_text_tokenized_processed                                             skills\n",
+       "0          1  Data Scientist / Matching Engineer (m/w/d)  ...  [responsible, improvement, taledos, search, ma...  [(responsible, soft_skills), (business, busine...\n",
+       "1          2    Senior Software Engineer - Data Platform  ...  [looking, senior, software, engineer, extensiv...  [(api, knowledge), (cloud, programming), (effi...\n",
+       "2          3                Senior Data Engineer (m/w/t)  ...  [member, data, engineering, team, responsible,...  [(responsible, soft_skills), (pipelines, knowl...\n",
+       "3          4                       Data Engineer (w/m/d)  ...  [digittyio, international, startup, headquarte...  [(saas, knowledge), (integration, programming)...\n",
+       "4          5                               Data Engineer  ...  [activate, data, client, using, stateoftheart,...  [(client, business), (honest, soft_skills), (a...\n",
+       "...      ...                                         ...  ...                                                ...                                                ...\n",
+       "5876    5877                   Manager, Machine Learning  ...  [job, description, alexa, amazon, new, cloudba...  [(alexa, programming), (signal, knowledge), (r...\n",
+       "5877    5878               Lead Data Scientist - Haskell  ...  [description, target, looking, engineer, data,...  [(optimization, knowledge), (modeling, knowled...\n",
+       "5878    5879            Senior Data Scientist (GEC11902)  ...  [position, description, proficient, java, pyth...  [(java, programming), (python, programming), (...\n",
+       "5879    5880             Senior Data & Applied Scientist  ...  [bing, core, relevance, team, responsible, ret...  [(responsible, soft_skills), (queries, knowled...\n",
+       "5880    5881     Principal Data Scientist, Deep Learning  ...  [comcasts, technology, amp, product, organizat...  [(organization, soft_skills), (innovative, sof...\n",
        "\n",
        "[5881 rows x 17 columns]"
       ]
@@ -461,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "earlier-tooth",
    "metadata": {},
    "outputs": [
@@ -471,7 +346,7 @@
        "dict_keys(['business', 'knowledge', 'programming', 'soft_skills'])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "hourly-cedar",
    "metadata": {},
    "outputs": [
@@ -612,7 +487,7 @@
        "[390 rows x 3 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,11 +646,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "massive-pittsburgh",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Doc2Vec...\n",
+      "Loading texts tagged...\n",
+      "Loaded model from /Users/jasminkazi/code/mizzle-toe/find-your-dream-job/fydjob/big_models/doc2vec.joblib\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = Doc2VecPipeline()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "french-canadian",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model.find_similar_jobs_from_string()"
+   ]
   }
  ],
  "metadata": {
