--- a/notebooks/API tests.ipynb
+++ b/notebooks/API tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 1,
    "id": "sunrise-hebrew",
    "metadata": {},
    "outputs": [],
@@ -723,16 +723,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "fancy-confusion",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Word2Vec...\n",
+      "Loaded model from /Users/alexanderherdt/code/mizzle-toe/find-your-dream-job/fydjob/data/models/w2v_model_baseline.model\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('r', 0.9589256644248962),\n",
+       " ('scala', 0.9507297277450562),\n",
+       " ('languages', 0.9489396214485168),\n",
+       " ('java', 0.9475581049919128),\n",
+       " ('programing', 0.9394864439964294),\n",
+       " ('perl', 0.9299498796463013),\n",
+       " ('matlab', 0.9242859482765198),\n",
+       " ('programming', 0.9236627221107483),\n",
+       " ('r.', 0.9223112463951111),\n",
+       " ('php', 0.9221781492233276)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from fydjob.Word2VecPipeline import Word2VecPipeline\n",
+    "\n",
+    "pipe = Word2VecPipeline()\n",
+    "\n",
+    "pipe.most_similar(\"python\",10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "editorial-rebate",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('statistics', 0.966637134552002),\n",
+       " ('math', 0.9631338119506836),\n",
+       " ('physics', 0.9472707509994507),\n",
+       " ('computer', 0.9361725449562073),\n",
+       " ('science', 0.9309971332550049),\n",
+       " ('economics', 0.925482988357544),\n",
+       " ('scienceengineering', 0.9140040874481201),\n",
+       " ('econometrics', 0.9105654358863831),\n",
+       " ('fields', 0.9079679250717163),\n",
+       " ('applied', 0.9071071147918701)]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipe.most_similar(\"mathematics\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "editorial-rebate",
+   "id": "operating-conducting",
    "metadata": {},
    "outputs": [],
    "source": []
